--- a/src/components/ProgressBoard/progressboard.css
+++ b/src/components/ProgressBoard/progressboard.css
@@ -1,16 +1,10 @@
 .maindisplay{
-    background-color: white;
+    background-color: #eff1f3;
     height: 95%;
-    margin: 1rem;
     border-radius: 5px;
 }
 
 .controlsNav{
-    border: 1px solid #696773;
-    border-width: 0  0 1px  0;
-    border-top-left-radius: 5px;
-    border-top-right-radius: 5px;
-    background-color: #696773;
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -24,4 +18,8 @@
     margin: 0.5rem;
     font-weight: bolder;
     border-radius: 5px;
+}
+#addJob:hover{
+    box-shadow: 0 0  10px #fed866;
+    cursor: pointer;
 }
