--- a/src/pages/dashboard.css
+++ b/src/pages/dashboard.css
@@ -15,6 +15,10 @@ main{
     flex:2;
     display: flex;
     flex-direction: column;
+    max-height: 100vh;
+    margin: 0;
+    overflow: hidden;
+
 }
 Topbar{
     flex: 0;
